
   +	Use SIZE= to by-pass SpamAssassin and/or the length of the temp.
   	file to by-pass when spamd-max-size is being used. Steve F.

   !	If a client hits the dns-bl, then then a helo: TRAP rule - the
	message isn't trapped. Steve F.

--2.6.0--

   *	Requires libsnert 1.75.18.

   !	Updated to use MCC2 API, the broadcast-only protocol, to improve
	performance.

--2.5.7--

   !	Change sink state replies to return a 421 4.3.2 unavailble message
	instead of command out of sequence. For consistency, the extended
	reply codes for rate-drop from 4.4.5 to 4.3.2 and concurrent-drop 
	from 4.7.1 to 4.3.2.

   +    Add rate-421-delay and concurrent-421-delay options to impose a
        delay before sending the 421 busy in place of the welcome
        banner. Its been observed for +rate-drop, that some SMTP clients
        "woodpecker", in that if they get a 421 and the connection drops,
        then they reconnect immediately. Reported by Steve Freegard.

--2.5.6--

   *	Requires libsnert 1.75.17

   +	Added msg-limit-report, report-to options. Requested by Nick Stefan.

   +	Disable ESMTP support (EHLO, AUTH, STARTTLS) when connection is 
	blacklisted.

   !	Fix old bug where some modules having *Optn functions were not
	initialised properly at startup; specifically those options that
	convert their option string into a special value. See
	filter_optn_table.

   !	Fix old bug where a discard operation could seg.fault because the
	forward connection was never opened for a discard operation.

   !	RFC tests applied to headers, such as minimum required headers,
	should be subject to access-map white listing.

--2.5.5--

   +	Add +smtp-helo-schizo option.

--2.5.4--

   *	Requires LibSnert 1.75.9

   !	Fix minor bug in socket3 API not returning ``from'' IP address
	for UDP packets received.

   !	Fixed statsNotify() "arv" rejection count calculation. The fail
   	count is the total DATA count less the successfully accepted
   	messages.
