@@ -1,7 +1,7 @@
 /*
  * p0f.h
  *
- * Copyright 2007 by Anthony Howe. All rights reserved.
+ * Copyright 2007, 2012 by Anthony Howe. All rights reserved.
  */
 
 #ifndef __p0f_h__
@@ -15,13 +15,28 @@ extern "C" {
  ***
  ***********************************************************************/
 
-#if defined(FILTER_P0F) && defined(HAVE_P0F_QUERY_H)
-# include <p0f-query.h>
+#if defined(FILTER_P0F)
+# if defined HAVE_API_H
+/* p0f 3.05b or better */
+#  include <api.h>
+
+typedef struct {
+	struct p0f_api_query p_query;
+	struct p0f_api_response p_response;
+} P0F;
+
+# elif defined HAVE_P0F_QUERY_H
+/* p0f 2.0.8 */
+#  include <p0f-query.h>
 
 typedef struct {
 	struct p0f_query p_query;
 	struct p0f_response p_response;
 } P0F;
+
+# else
+#  error "Please specify the p0f source directory using --with-p0f."
+# endif
 
 extern FilterContext p0f_context;
 
@@ -36,7 +51,7 @@ extern int p0fFini(Session *null, va_list ignore);
 extern int p0fOptn(Session *null, va_list ignore);
 extern int p0fConnect(Session *sess, va_list ignore);
 extern int p0fHeaders(Session *sess, va_list args);
-
+extern int p0fGenerateReport(Session *sess, P0F *data, char *buf, size_t size, int brief);
 #endif
 
 /***********************************************************************
